--- a/index.html
+++ b/index.html
@@ -6,20 +6,18 @@
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
 <body>
-  <div class="aaa">
+  <header class="aaa">
     <img src="./eisenhower-matrix.jpg" alt="Eisenhower Matrix">
     <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-  </div>
+  </header>
 
-  <div class="centered-main-page-element">
+  <main class="centered-main-page-element">
 
-    <p id="top-section-for-adding-element-to-list">
-      <label for="new-task">Add Item</label>
-      <div class="task-row-wrapper">
-        <input id="new-task"class="task" type="text"><button>Add</button>
-      </div>
-    </p>
-
+    <h3>Add Item</h3>
+    <div class="task-row-wrapper">
+      <input id="new-task"class="task" type="text"><button>Add</button>
+    </div>
+    
     <h3>Todo</h3>
     <ul id="incomplete-tasks">
       <li>
@@ -46,7 +44,7 @@
       </li>
     </ul>
     
-  </div>
+  </main>
 <script src="app.js"></script>
 </body>
 </html>
