--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
 
-  <main class="centered-main-page-element">
+  <main class="centered-main-content">
 
     <h3>Add Item</h3>
     <div class="task-row-wrapper">
