--- a/index.html
+++ b/index.html
@@ -5,42 +5,42 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
-<body>
+<body class="body">
   <header class="header">
-    <img src="./eisenhower-matrix.jpg" alt="Eisenhower Matrix">
-    <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+    <img class="header-img" src="./eisenhower-matrix.jpg" alt="Eisenhower Matrix">
+    <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
 
   <main class="centered-main-content">
 
-    <h3>Add Item</h3>
+    <h3 class="heading-h3">Add Item</h3>
     <div class="task-row-wrapper">
-      <input id="new-task"class="task" type="text"><button>Add</button>
+      <input id="new-task"class="task input-new-task input-text" type="text"><button class="button" id="button-add">Add</button>
     </div>
     
-    <h3>Todo</h3>
-    <ul id="incomplete-tasks">
-      <li>
-        <input type="checkbox"><label class="task">Pay Bills</label>
-        <input type="text">
-          <button class="edit">Edit</button>
-          <button class="delete"><img src="./remove.svg"></button>
+    <h3 class="heading-h3">Todo</h3>
+    <ul id="incomplete-tasks" class="list">
+      <li class="list-item">
+        <input type="checkbox" class="input-checkbox"><label class="task label">Pay Bills</label>
+        <input type="text" value="Pay Bills" class="task input-text">
+          <button class="edit button">Edit</button>
+          <button class="delete button"><img class="delete-img" src="./remove.svg"></button>
       </li>
-      <li class="edit-mode">
-        <input type="checkbox"><label class="task">Go Shopping</label>
-        <input type="text" value="go-shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete"><img src="./remove.svg"></button>
+      <li class="edit-mode list-item">
+        <input type="checkbox" class="input-checkbox"><label class="task label">Go Shopping</label>
+        <input type="text" value="Go Shopping" class="task input-text">
+          <button class="edit button">Save</button>
+          <button class="delete button"><img class="delete-img" src="./remove.svg"></button>
       </li>
     </ul>
 
-    <h3>Completed</h3>
-    <ul id="completed-tasks">
-      <li>
-        <input type="checkbox" checked><label class="task">See the Doctor</label>
-        <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete"><img src="./remove.svg"></button>
+    <h3 class="heading-h3">Completed</h3>
+    <ul id="completed-tasks" class="list">
+      <li class="list-item">
+        <input type="checkbox" class="input-checkbox" checked><label class="task label">See the Doctor</label>
+        <input type="text" class="task input-text">
+          <button class="edit button">Edit</button>
+          <button class="delete button"><img class="delete-img" src="./remove.svg"></button>
       </li>
     </ul>
     
