--- a/index.html
+++ b/index.html
@@ -1,48 +1,65 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
   <title>Todo App</title>
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
+
 <body class="body">
+
   <header class="header">
-    <img class="header-img" src="./eisenhower-matrix.jpg" alt="Eisenhower Matrix">
-    <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+    <img class="header__img" src="./eisenhower-matrix.jpg" alt="Eisenhower Matrix">
+    <a class="header__info-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
 
-  <main class="centered-main-content">
+  <main class="main-content">
 
-    <h3 class="heading-h3">Add Item</h3>
-    <div class="task-row-wrapper">
-      <input id="new-task"class="task input-new-task input-text" type="text"><button class="button" id="button-add">Add</button>
+<!-- вложенный блок -->
+    <div class="add-item-block">
+      <h3 class="heading-h3">Add Item</h3>
+      <div class="task-row-wrapper">
+        <input id="new-task"class="task input-new-task input-text" type="text"><button class="button" id="button-add">Add</button>
+      </div>
     </div>
     
-    <h3 class="heading-h3">Todo</h3>
-    <ul id="incomplete-tasks" class="list">
-      <li class="list-item">
-        <input type="checkbox" class="input-checkbox"><label class="task label">Pay Bills</label>
-        <input type="text" value="Pay Bills" class="task input-text">
+    <div class="todo-block">
+      <h3 class="heading-h3">Todo</h3>
+      <ul class="todo-block__incomplete-tasks list">
+        <li class="list-item">
+          <!-- dynamic elements -->
+          <input type="checkbox" class="input-checkbox">
+          <label class="task label">Pay Bills</label>
+          <input type="text" value="Pay Bills" class="task input-text">
           <button class="edit button">Edit</button>
           <button class="delete button"><img class="delete-img" src="./remove.svg"></button>
-      </li>
-      <li class="edit-mode list-item">
-        <input type="checkbox" class="input-checkbox"><label class="task label">Go Shopping</label>
-        <input type="text" value="Go Shopping" class="task input-text">
+        </li>
+        <li class="edit-mode list-item">
+          <input type="checkbox" class="input-checkbox">
+          <label class="task label">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="task input-text">
           <button class="edit button">Save</button>
           <button class="delete button"><img class="delete-img" src="./remove.svg"></button>
-      </li>
-    </ul>
+        </li>
+        <!-- end of dynamic elements -->
+      </ul>
+    </div>
 
-    <h3 class="heading-h3">Completed</h3>
-    <ul id="completed-tasks" class="list">
-      <li class="list-item">
-        <input type="checkbox" class="input-checkbox" checked><label class="task label">See the Doctor</label>
-        <input type="text" class="task input-text">
-          <button class="edit button">Edit</button>
-          <button class="delete button"><img class="delete-img" src="./remove.svg"></button>
-      </li>
-    </ul>
+    <div class="completed-block">
+      <h3 class="heading-h3">Completed</h3>
+      <ul class="completed-block__completed-tasks list">
+        <!-- dynamic elements -->
+        <li class="list-item">
+          <input type="checkbox" class="input-checkbox" checked>
+          <label class="task label">See the Doctor</label>
+          <input type="text" class="task input-text">
+            <button class="edit button">Edit</button>
+            <button class="delete button"><img class="delete-img" src="./remove.svg"></button>
+        </li>
+        <!-- end of dynamic elements -->
+      </ul>
+    </div>
     
   </main>
 <script src="app.js"></script>
